# my-llama-index

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  generate.py  init.sql  main.py  pyproject.toml  query.py
app/: agent.py  settings.py  workflow.py
backend/src/auth/: constants.py  database.py  dependencies.py  routes.py  schemas.py  utils.py
backend/src/users/: models.py  routes.py
common/: decorators.py  utils.py
configs/: app_config.py  rag_config.py
indexing/: indexing_task_runner.py  ingestion_pipeline_builder.py  ingestion_pipeline_manager.py  local_file_to_vector_index.py
indexing/node_parsers/: node_parser.py
indexing/readers/: helper.py  provided_readers.py  reader.py
indexing/tasks/: default.yaml  example.py
indexing/transformations/: helper.py  provided_transformations.py
indexing/transformations/metadata_extractors/: metadata_extractor.py
indexing/transformations/node_parsers/: node_parser.py  text_cleaner.py
rag/: async_extensions.py  evaluate.py  index_manager.py  node_reranker.py  query_engine_manager.py  storage_context_manager.py
rag/post_processors/: node_reranker.py
rag/query_engines/: async_extensions.py
rag/retrievers/: parent_retriever.py  qa_followup_retriever.py
